# poker_trainer

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SIMULATION_REPORT.md  USER_GUIDE.md  WORKLOG.md  deploy.sh  docker-compose.yml  instruction.md  pyproject.toml  render.yaml  simulate.py
.claude/: .json  settings.json
.claude/agents/: backend-engineer.md  devops-engineer.md  frontend-engineer.md
.claude/skills/dev-sop/: SKILL.md
backend/: main.py  room_manager.py  room_session.py  serializer.py  session.py  ws_renderer.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ActionLog.tsx  ActionPanel.tsx  Card.tsx  CommunityCards.tsx  GameTable.tsx  HandResultModal.tsx  HandResultOverlay.tsx  HistoryView.tsx  HumanBustOverlay.tsx  InfoPanel.tsx  PlayerSeat.tsx  PotDisplay.tsx  RaiseSlider.tsx  RoomLobby.tsx  TimerBar.tsx
poker_trainer/: __init__.py  __main__.py
poker_trainer/cards/: __init__.py  card.py  deck.py  hand_evaluator.py
poker_trainer/engine/: __init__.py  dealer.py  game.py  pot.py  table.py
poker_trainer/players/: __init__.py  base_player.py  bot_player.py  human_player.py  player_factory.py  ws_human_player.py
poker_trainer/strategies/: __init__.py  aggressive_strategy.py  base_strategy.py  passive_strategy.py  random_strategy.py
poker_trainer/ui/: __init__.py  renderer.py
poker_trainer/utils/: __init__.py  constants.py
tests/: test_card.py  test_deck.py  test_game.py  test_hand_evaluator.py  test_strategies.py
(+6 files in other folders)
